[Profile]:1. Brand profile password section brings in same form, 2. Brands homepage image change, 3. Phone number validation added for profile page

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -600,10 +600,9 @@ ul.menu-item li {
 
 .influencers-picture {
   border-radius: 50%;
-  max-width:117px;
-  max-height:117px;
-  width: auto;
-  height: auto;
+  width:117px;
+  height:117px;
+  overflow: hidden;
 }
 
 .brands-block img.resize {
