--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -109,7 +109,7 @@
     <div class="text-top few-brand">Few of our Influencers</div>
     <div class="brands-block">
       <span><a href="#" data-toggle="popover" title="2.3M Followers"><%= image_tag('tom-cruise.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="2.5M Followers"><%= image_tag('tom-hanks.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" data-toggle="popover" title="2.5M Followers"><%= image_tag('Akshay-kumar.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="2.9M Followers"><%= image_tag('shahrukh-khan.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="1.3M Followers"><%= image_tag('katrina-kaif.png', :class => 'influencers-picture') %></a></span>
       <span><a href="#" data-toggle="popover" title="1.9M Followers"><%= image_tag('taylor-swift.png', :class => 'influencers-picture') %></a></span>
