--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -24,7 +24,7 @@
               <li><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li><a href="<%= new_user_session_path %>">LOGIN</a></li>
-              <li><%= link_to "SIGN UP FREE", "#loginModal", "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
+              <li><%= link_to "SIGN UP FREE", "#signup", "data-toggle" => "modal", :class => "btn-custom btn-theme text-white" %></li>
           <% end %>
         </ul>
       </div>
