--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -1,8 +1,8 @@
 <script type="text/x-handlebars" id="set-facebook-activity-template">
     <div class="modal fade" id="SetFacebookActivity" role="dialog">
       <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
+        <div class="modal-content profile-image-modal-content">
+          <div class="modal-header profile-image-modal-header">
             <a href="#"><%= image_tag('logo_white.png', :class => 'img-responsive login-modal-logo', :alt => "logo") %></a>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
