--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -13,51 +13,51 @@
 
       <div class="form-group">
         <div class="col-md-6">
-          <%= f.label :first_name, "First Name" %>
-          <%= f.text_field :first_name %>
+          <%= f.label :first_name, 'First Name' %>
+          <%= f.text_field :first_name, required: true  %>
         </div>
         <div class="col-md-6">
-          <%= f.label :last_name, "Last Name" %>
-          <%= f.text_field :last_name %>
+          <%= f.label :last_name, 'Last Name' %>
+          <%= f.text_field :last_name, required: true  %>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-md-6">
-          <%= f.label :company_name, "Company Name" %>
-          <%= f.text_field :company_name %>
+          <%= f.label :company_name, 'Company Name' %>
+          <%= f.text_field :company_name, required: true %>
         </div>
         <div class="col-md-6">
           <%= f.label :company_email, current_user.brand? ? 'Company Email' : 'Email' %>
-          <%= f.email_field :company_email %>
+          <%= f.email_field :company_email, required: true %>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-md-6">
           <%= f.label :industry %>
-          <%= f.text_field :industry %>
+          <%= f.text_field :industry, required: true %>
         </div>
         <div class="col-md-6">
           <%= f.label :phone %>
-          <%= f.text_field :phone %>
+          <%= f.text_field :phone, required: true %>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col-md-6">
           <%= f.label :street_address, class: 'textarea-label' %>
-          <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: "Enter your address here" %>
+          <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: 'Enter your address here', required: true %>
         </div>
         <div class="col-md-6">
           <div class="row">
             <div class="col-md-12">
               <%= f.label :landmark %>
-              <%= f.text_field :landmark %>
+              <%= f.text_field :landmark, required: true %>
             </div>
             <div class="col-md-12">
               <%= f.label :city %>
-              <%= f.text_field :city %>
+              <%= f.text_field :city, required: true %>
             </div>
             <div class="col-md-12">
               <%= f.label :country %>
@@ -71,7 +71,7 @@
 
         <div class="col-md-6">
           <%= f.label :zip_code %>
-          <%= f.text_field :zip_code %>
+          <%= f.text_field :zip_code, required: true %>
         </div>
 
         <div class="col-md-6">
@@ -88,7 +88,7 @@
 
           <div class="form-group">
             <div class="col-md-6">
-              <%= f.label :current_password, "Old Password" %>
+              <%= f.label :current_password, 'Old Password' %>
               <%= f.password_field :current_password %>
             </div>
             <div class="col-md-6">
@@ -98,11 +98,11 @@
 
           <div class="form-group">
             <div class="col-md-6">
-              <%= f.label :password, "New Password" %>
+              <%= f.label :password, 'New Password' %>
               <%= f.password_field :password %>
             </div>
             <div class="col-md-6">
-              <%= f.label :password_confirmation, "Retype Password" %>
+              <%= f.label :password_confirmation, 'Retype Password' %>
               <%= f.password_field :password_confirmation %>
             </div>
           </div>
@@ -114,8 +114,8 @@
 
       <div class="form-group short-bio-row">
         <div class="col-md-12">
-          <%= f.label :short_bio, "Short Bio", class: 'textarea-label' %>
-          <%= f.text_area :short_bio, rows: 6, class: 'short_bio' %>
+          <%= f.label :short_bio, 'Short Bio', class: 'textarea-label' %>
+          <%= f.text_area :short_bio, rows: 6, class: 'short_bio', required: true %>
         </div>
       </div>
 
