--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -44,7 +44,7 @@
     }
 
     .modal-header .close {
-        background: image-url("modal_close_btn.png") no-repeat;
+        /*background: image-url("modal_close_btn.png") no-repeat;*/
         height: 20px;
         opacity: 1;
         width: 20px;
@@ -63,7 +63,7 @@
 </style>
 
 <div aria-hidden="false" class="modal fade in" id="signup">
-  <div style="height: 863px;" class="modal-backdrop fade in"></div>
+  <div class="modal-backdrop fade in"></div>
   <div class="modal-dialog modal-md">
     <div class="modal-content">
       <div class="modal-header">
@@ -73,17 +73,17 @@
       <div class="modal-body model-iner">
         <div class="row">
           <div class="col-md-12">
-            <input name="role" id="role_seeker" value="1" class="signup-role" checked="checked" type="radio">
-            <label for="role_seeker">I'm an Influencer</label>
+            <input name="role" id="role_influencer" value="1" class="signup-role" checked="checked" type="radio">
+            <label for="role_influencer">I'm an Influencer</label>
             <br>
-            <input name="role" id="role_pilot" value="0" class="signup-role" type="radio">
-            <label for="role_pilot">I'm a Brand</label>
+            <input name="role" id="role_brand" value="0" class="signup-role" type="radio">
+            <label for="role_brand">I'm a Brand</label>
           </div>
         </div>
         <div class="row hidden" id="brand-signup">
           <div class="col-md-12">
             <p>Account Set Up</p>
-
+            <form>
             <div class="input_container">
               <div class="label_l">Email</div>
               <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
@@ -105,7 +105,7 @@
               <div class="checkbox checkbox-primary">
                 <input data-parsley-id="2981" data-parsley-multiple="agreement" name="agreement" id="agreement" value="{:class=&gt;&quot;styled&quot;}" type="checkbox">
                 <label for="agreement">
-                  I have read Takeoff's
+                  I have read BrandReach's
                   <a data-toggle="modal" href="#terms">Terms &amp; Conditions</a>
                   and agree with them
                 </label>
@@ -119,33 +119,35 @@
         <div class="row" id="influencer-signup">
           <div class="col-md-12">
             <div class="col-md-12 no-left">
-              <p>Takeoff accepts pilots only on invitation. If you think your worth to
-                be a pilot kindly send us your details. We would contact you.</p>
+              <a href="<%= user_omniauth_authorize_path('facebook') %>"> Sign Up With Facebook  </a>
             </div>
-            <form novalidate="" data-parsley-validate="true" action="/request_account" accept-charset="UTF-8" data-remote="true" method="post">
-
-              <button class="btn btn-default save_btn" type="submit">SUBMIT</button>
-            </form>
-
-          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+  </div>
 
 <script>
     $(function () {
+        var value = $("input[name='role']:checked").val();
+
+        showSignUpInfo(value);
+
         $("input[name='role']").change(function () {
             var value = $("input[name='role']:checked").val();
             console.log('selected user type is ' + value);
-            if (value == '1') {
+            showSignUpInfo(value);
+        });
+
+        function showSignUpInfo(id){
+            if (id == '1') {
                 $('#brand-signup').addClass('hidden');
                 $('#influencer-signup').removeClass('hidden');
             } else {
                 $('#brand-signup').removeClass('hidden');
                 $('#influencer-signup').addClass('hidden');
             }
-        });
+        }
     });
 </script>
