--- a/app/views/shared/_sign_in_modal.html.erb
+++ b/app/views/shared/_sign_in_modal.html.erb
@@ -82,7 +82,7 @@
         </div>
         <div class="row hidden" id="brand-signin">
           <div class="col-md-12">
-            <form>
+            <form method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="true">
             <div class="input_container">
               <div class="label_l">Email</div>
               <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
