--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -5,7 +5,7 @@
 <div class="brands-profile-page-wrapper">
 
   <%= render 'shared/show_errors', :object => @user%>
-  <%= image_tag(@user.profile_picture, :class => 'profile-picture', :alt => "profile-picture") %>
+  <%= image_tag(@user.profile_picture, :class => 'profile-picture center-block img-circle', :alt => "profile-picture") %>
 
   <%= form_for @user, url: profile_path(@user), html: {class: 'form-horizontal personal-info-form'} do |f| %>
 
@@ -115,7 +115,7 @@
       <div class="form-group short-bio-row">
         <div class="col-md-12">
           <%= f.label :short_bio, 'Short Bio', class: 'textarea-label' %>
-          <%= f.text_area :short_bio, rows: 6, class: 'short_bio', required: true %>
+          <%= f.text_area :short_bio, rows: 8, class: 'short_bio', required: true %>
         </div>
       </div>
 
@@ -143,21 +143,21 @@
 
                       <div id="fb_<%= g.object.account_id %>" class="tab-pane">
                         <div class="form-group">
-                          <div class="col-md-5 col-sm-8 col-xs-11">
+                          <div class="col-md-4 col-sm-7 col-xs-10">
                             <%= g.label :status_update_cost, "Status Update" %>
                             <%= g.number_field :status_update_cost, required: true %> INR
                           </div>
-                          <div class="col-md-6 col-sm-8 col-xs-11">
+                          <div class="col-md-6 col-sm-7 col-xs-10">
                             <%= g.label :cover_photo_cost, "Cover Photo" %>
                             <%= g.number_field :cover_photo_cost, required: true %> INR
                           </div>
                         </div>
                         <div class="form-group">
-                          <div class="col-md-5 col-sm-8 col-xs-11">
+                          <div class="col-md-4 col-sm-7 col-xs-10">
                             <%= g.label :profile_photo_cost, "Profile Photo" %>
                             <%= g.number_field :profile_photo_cost, required: true %> INR
                           </div>
-                          <div class="col-md-6 col-sm-8 col-xs-11">
+                          <div class="col-md-6 col-sm-7 col-xs-10">
                             <%= g.label :video_post_cost, "Video Post" %>
                             <%= g.number_field :video_post_cost, required: true %> INR
                           </div>
