--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'campaigns.css', media: 'all' %>
 
-<% title "Influencer Campaign" %>
+<% title 'Influencer Campaign' %>
 
 <div class="payment-div ">
   <div class="payment-button-set pull-right">
@@ -92,12 +92,6 @@
             <% @campaigns.each do |campaign| %>
                 <tr>
                   <td class="squaredFour"><input type="checkbox" class="EngagementCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
-                  <!--<td>-->
-                    <!--<div class="switch">-->
-                      <!--<input id="engagement_switch_<%= campaign.id %>" data-id="<%= campaign.id %>"  class="cmn-toggle cmn-toggle-round" type="checkbox" <%= campaign.campaign_active? ? 'checked' : '' %>>-->
-                      <!--<label for="engagement_switch_<%= campaign.id %>"></label>-->
-                    <!--</div>-->
-                  <!--</td>-->
                   <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_comments %></td>
