--- a/app/views/registrations/create.js.erb
+++ b/app/views/registrations/create.js.erb
@@ -1,1 +1,5 @@
-alert('sign up data submit');
+<% if @success %>
+    window.location.href = "<%= new_user_registration_path %>";
+<% else %>
+    alert('Fail to sign up');
+<% end %>
