--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -32,8 +32,8 @@
 <div class="campaign-content">
 
   <ul class="nav nav-tabs" id="campaign-tabs">
-    <li class= "active" id="performance_list"><a href="#performance"><span id="performance-blue"><%= image_tag('Performance_blue.png') %></span><span id="performance-black" style="display: none"><%= image_tag('Performance.png') %></span> <span class="performance-tab"></span> Performance </a></li>
-    <li class= "" id="engagement_list"><a href="#engagement"><span id="engagement-black"><%= image_tag('Engagement_black.png') %></span><span id="engagement-blue" style="display: none"><%= image_tag('Engagement.png') %></span><span class="engagement-tab"></span> Engagement </a></li>
+    <li class="active" id="performance_list"><a href="#performance"><span id="performance-blue"><%= image_tag('Performance_blue.png') %></span><span id="performance-black" style="display: none"><%= image_tag('Performance.png') %></span><span class="performance-tab"></span> Performance </a></li>
+    <li class="" id="engagement_list"><a href="#engagement"><span id="engagement-black"><%= image_tag('Engagement_black.png') %></span><span id="engagement-blue" style="display: none"><%= image_tag('Engagement.png') %></span><span class="engagement-tab"></span> Engagement </a></li>
   </ul>
   <div class="tab-content panel panel-campaigns">
     <div id="performance" class="tab-pane fade in active">
@@ -56,7 +56,7 @@
                 <tr>
                   <td class="squaredFour"><input type="checkbox" class="PerformanceCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
                   <td>
-                    <%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %>
+                    <%= image_tag(campaign.sender.profile_picture, :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %>
                     <% if campaign.social_account_activity_id.blank? %>
                         <br/>
                         <%= link_to 'Set facebook activity', 'javascript:', :class => 'btn', data: { campaign: campaign.id, page: campaign.facebook_account.account_id, target: 'SetFacebookActivity' } %>
@@ -64,8 +64,8 @@
                   </td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_post_reach %></td>
-                  <td><%= campaign.start_date.present? ? campaign.start_date.strftime("%B %d, %Y") : 'NA' %></td>
-                  <td><%= campaign.end_date.present? ? campaign.end_date.strftime("%B %d, %Y") : 'NA' %></td>
+                  <td><%= campaign.start_date.present? ? campaign.start_date.strftime('%B %d, %Y') : 'NA' %></td>
+                  <td><%= campaign.end_date.present? ? campaign.end_date.strftime('%B %d, %Y') : 'NA' %></td>
                 </tr>
             <% end %>
             </tbody>
@@ -79,7 +79,7 @@
       <table class="table table-striped table-bordered table-responsive engagement_table">
         <thead>
         <tr class="payment-header">
-          <th class="squaredFour" id="selecct_all_engagement"><input type="checkbox" class="payment-header" value="all"/></th>
+          <th class="squaredFour" id="select_all_engagement"><input type="checkbox" class="payment-header" value="all"/></th>
           <th>Campaign Name</th>
           <th>Likes</th>
           <th>Comments</th>
@@ -92,7 +92,7 @@
             <% @campaigns.each do |campaign| %>
                 <tr>
                   <td class="squaredFour"><input type="checkbox" class="EngagementCheckBox" data-id="<%= campaign.id %>" value="1"/></td>
-                  <td><%= image_tag(campaign.sender.profile_picture , :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
+                  <td><%= image_tag(campaign.sender.profile_picture, :class => 'pepsi-img-responsive') %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_comments %></td>
                   <td><%= campaign.number_of_shares %></td>
@@ -100,14 +100,12 @@
             <% end %>
             </tbody>
         <% end %>
-
         </tbody>
       </table>
     </div>
   </div>
 
 </div>
-
 
 <script type="text/javascript">
     $(document).ready(function(){
@@ -135,6 +133,8 @@
             document.getElementById("engagement-black").style.display = 'inline';
         });
 
+        // This code is needed for Switch button
+
 //        $('.cmn-toggle').click(function() {
 //            var id = $(this).data('id');
 //            var campaign_active_status = this.checked;
@@ -152,11 +152,11 @@
 //        });
 
         $("#select_all_performance").change(function () {
-               $(".PerformanceCheckBox").prop('checked', $("#select_all_performance input:checked").length);
+            $(".PerformanceCheckBox").prop('checked', $("#select_all_performance input:checked").length);
         });
 
-        $("#selecct_all_engagement").change(function () {
-            $(".EngagementCheckBox").prop('checked', $("#selecct_all_engagement input:checked").length);
+        $("#select_all_engagement").change(function () {
+            $(".EngagementCheckBox").prop('checked', $("#select_all_engagement input:checked").length);
         });
 
         $('#export_campaigns').click(function() {
@@ -165,7 +165,7 @@
                 campaign_ids.push($(this).data('id'));
             });
 
-            window.location.href  = "<%= export_influencer_campaigns_campaigns_path(format: :csv) %>?campaign_ids=" + campaign_ids;
+            window.location.href = "<%= export_influencer_campaigns_campaigns_path(format: :csv) %>?campaign_ids=" + campaign_ids;
 
         });
     });
